cloudfront_memcached/module_vpc/vpc.tf
/*#######======================================================================================================
------------------VPC Area
======================================================================================================#######*/

/*#######
criação da VPC
#######*/
resource "aws_vpc" "vpc" {
  cidr_block           = var.vpc_cidr
  enable_dns_hostnames = true
  enable_dns_support   = true
  tags = merge(
    {
      "Name" = format(
        "${var.prefix_name}-vpc"
      )
    },
    var.tags,
  )
}
